--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.12.2",
     "express": "^4.12.3",
-    "mongo": "^0.1.0"
+    "mongo": "^0.1.0",
+    "mongoose": "^3.8.25"
   }
 }
