--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.12.2",
+    "ejs": "^2.3.1",
     "express": "^4.12.3",
+    "express-flash": "0.0.2",
+    "express-session": "^1.10.4",
+    "express-validator": "^2.9.0",
     "mongo": "^0.1.0",
-    "mongoose": "^3.8.25"
+    "mongodb": "^2.0.24",
+    "mongoose": "^3.8.25",
+    "passport": "^0.2.1",
+    "passport-local": "^1.0.0"
   }
 }
