--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
   ],
   "dependencies": {
     "angular": "~1.3.15",
-    "angular-route": "~1.3.15"
+    "angular-route": "~1.3.15",
+    "angular-ui-bootstrap": "~0.12.1"
   }
 }
