--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,6 @@
   "dependencies": {
     "angular": "~1.3.15",
     "angular-route": "~1.3.15",
-    "angular-ui-bootstrap": "~0.12.1"
+    "bootstrap": "~3.3.4"
   }
 }
