--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
     "mongoose": "^3.8.25",
     "passport": "^0.2.1",
     "passport-local": "^1.0.0"
+  },
+  "devDependencies": {
+    "should": "^5.2.0",
+    "supertest": "^0.15.0"
   }
 }
+
